# long_running_agent

./: .coverage  README.md  coverage.xml  coverage_history.json  coverage_plan.json  main.py  pyproject.toml  run_all_sessions.py  server.py
harness/: coverage_manager.py  llm_client.py  run_session.py  run_tests.bat  run_tests.sh  utils.py
static/: index.html
target_repo/src/domain/: models.py
target_repo/src/service/: calculator.py
target_repo/src/utils/: analytics.py  helpers.py  validators.py
target_repo/tests/: pyproject.toml  test_analytics.py  test_calculator.py  test_helpers.py  test_models.py  test_validators.py
